fixed date clipping bug

--- a/app/assets/stylesheets/sections/listings/_search.scss
+++ b/app/assets/stylesheets/sections/listings/_search.scss
@@ -292,7 +292,7 @@ header#listing_search {
       @include box-sizing(border-box);
 
       @media (min-width: 768px) {
-        padding-right: 220px;
+        padding-right: 280px;
       }
 
       @media (max-width: 480px) {
@@ -373,7 +373,7 @@ header#listing_search {
         position: absolute;
         top: 0px;
         right: 0px;
-        width: 215px;
+        width: 275px;
         font-size: 14px;
 
         .availability-date-start {
@@ -577,5 +577,4 @@ section.search section#results.list {
 
 
 }
-
 
